--- a/Lucca.CloudEvents.Abstractions/Lucca.CloudEvents.Abstractions.csproj
+++ b/Lucca.CloudEvents.Abstractions/Lucca.CloudEvents.Abstractions.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CloudNative.CloudEvents" Version="1.3.80" />
+  </ItemGroup>
+
 </Project>
